# obs_base

./: .gitattributes  .gitignore  .pre-commit-config.yaml  COPYRIGHT  DM-51153.ipynb  README  SConstruct  ingest_visit_sims.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  types.txt
bin.src/: convert_gen2_repo_to_gen3.py  g2g3calibs.py  ingestExternalData.py  ingestInstrumentSignatureData.py  ingestRaws.py  registerInstrument.py
doc/: SConscript  conf.py  documenteer.toml  doxygen.conf  index.rst  manifest.yaml
policy/: BaseDictionary.yaml  CalibrationMappingDefaults.yaml  CalibrationMappingDictionary.paf  DatasetMappingDictionary.paf  DatasetMappingDictionary.yaml  ExposureMappingDefaults.yaml  ExposureMappingDictionary.paf  ImageMappingDictionary.paf  MapperDictionary.paf  MappingDictionary.paf  Object.yaml  datasets.yaml  exposures.yaml  writeRecipes.yaml
testit/: HscMapper.paf  LsstSimMapper.paf  SdssMapper.paf  SuprimecamMapper.paf  changes.summary  compit.py  comppafs.py  copynew  copyobs  copyone  copyorig  copyref  datasets.yaml  datasets.yaml.new  diff_hscit  diffit  diffit.py  diffit_hsc.py  dumpit.py  dumpskip.py  exposures.yaml.new  makerfcs  movekeys.yaml  new_diffit  news_diffit  obs_diffit  obskeys.yaml  obskeys.yaml.all  ones_diffit  refit  refs_diffit  rmit  rmit.py  testMapper.paf  utils.py
tests/: BaseMapper.paf  BaseMapper.yaml  ConflictMapper.yaml  MinMapper1.paf  MinMapper1.yaml  MinMapper2.paf  MinMapper2.yaml  cameraMapper.py  outputRoot.py  testCameraMapper.py  testComposite.py  testDM-329.py  testExposureFromImage.py  testFindParentMapper.py  testFsScanner.py  testMakeRawVisitInfo.py  testOutputRoot.py  testPolicy.py  testRegistry.py  testUtils.py  test_butlerFits.py  test_cameraMapper.py  test_cliCmdConvert.py  test_cliCmdDefineVisits.py  test_cliCmdRegisterInstrument.py  test_cliCmdTestIngest.py  test_cliCmdWriteCuratedCalibrations.py  test_cliLog.py  test_cliOption.py  test_cliOptionInstrument.py  test_cliOptionTransfer.py  test_composite.py  test_defineVisits.py  test_dm-329.py  test_exposureFromImage.py  test_exposureIdInfo.py  test_filters.py  (+17 more)
(+265 files in other folders)
